deployterra copy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terraclouddev
  labels:
      app: terraclouddev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: terraclouddev
  strategy:
     rollingUpdate:
         maxSurge: 25%
         maxUnavailable: 25%
     type: RollingUpdate
  template:
    metadata:
      labels:
        app: terraclouddev
    spec:
      imagePullSecrets:
          - name: nginx-image
      containers:
      - name: backendapi
        image: contentapp.azurecr.io/terracloud:v2
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        volumeMounts:
            - mountPath: /go/src/terracloud/devlog
              name: log-storage
      volumes:
          - name: log-storage
            persistentVolumeClaim:
                  claimName: terracloudpvcdev
      
---
kind: Service
apiVersion: v1
metadata:
  name:  terrabackenddev
  annotations:
      service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app:  terraclouddev
  type:  LoadBalancer
  ports:
  - name:  terraapiport
    port:  80
    targetPort:  9000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecRequestBodyLimit 15107200
      SecAuditLog /dev/stdout
  name: terraclouddev
spec:
  rules:
    - host: terraclouddev.sevenchannels.in
      http:
        paths:
          - backend:
              serviceName: terrabackenddev
              servicePort: 80
            path: /(.*)
