deployterra.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terracloud${env}
  labels:
      app: terracloud${env}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: terracloud${env}
  strategy:
     rollingUpdate:
         maxSurge: 25%
         maxUnavailable: 25%
     type: RollingUpdate
  template:
    metadata:
      labels:
        app: terracloud${env}
    spec:
      imagePullSecrets:
          - name: nginx-image
      containers:
      - name: backendapi
        image: ${registry}.azurecr.io/terracloud:${imagetag}
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        volumeMounts:
            - mountPath: /go/src/terracloud/devlog
              name: log-storage
      volumes:
          - name: log-storage
            persistentVolumeClaim:
                  claimName: terracloudpvc${env}
      
---
kind: Service
apiVersion: v1
metadata:
  name:  terrabackend${env}
  annotations:
      service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app:  terracloud${env}
  type:  LoadBalancer
  ports:
  - name:  terraapiport
    port:  80
    targetPort:  9000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecRequestBodyLimit 15107200
      SecAuditLog /dev/stdout
  name: terracloud${env}
spec:
  rules:
    - host: terracloud${env}.sevenchannels.in
      http:
        paths:
          - backend:
              serviceName: terrabackend${env}
              servicePort: 80
            path: /(.*)
